--- a/lesson_1/lesson_1.html
+++ b/lesson_1/lesson_1.html
@@ -12,8 +12,9 @@
     <h1>Steve Jobs</h1>
     <h2>Co-founder, Chairman, and CEO of Apple Inc.</h2>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Steve_Jobs_Headshot_2010-CROP.jpg/1024px-Steve_Jobs_Headshot_2010-CROP.jpg"
-         alt="Steve">
+         alt="Steve" height="400px" width="400px">
 </div>
+
 <div>
     <p>
         Steven Paul Jobs was an American business magnate, industrial
@@ -22,12 +23,28 @@
         directors following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
         recognized as a pioneer of the personal computer revolution of the 1970s and 1980s, along with his early
         business partner and fellow Apple co-founder Steve Wozniak.
-
+    </p>
+    <p>
         Jobs was born in San Francisco, California, and put up for adoption. He was raised in the San Francisco Bay
         Area. He attended Reed College in 1972 before dropping out that same year, and traveled through India in 1974
         seeking enlightenment and studying Zen Buddhism.
     </p>
+</div>
 
+<div>
+    <h3>Honors and awards</h3>
+    <ul>
+        <li>2013: Posthumously inducted as a Disney Legend.</li>
+        <li>2012: Grammy Trustees Award, an award for those who have influenced the music industry in areas unrelated to
+            performance.
+        </li>
+        <li>2007: Jobs was inducted into the California Hall of Fame, located at The California Museum for History,
+            Women and the Arts.
+        </li>
+        <li>2007: Jobs was named the most powerful person in business by Fortune magazine.</li>
+        <li>1991: Howard Vollum Award by Reed College</li>
+        <li>1989: '’Entrepreneur of the Decade'’ by Inc. magazine</li>
+    </ul>
 </div>
 
 </body>
