--- a/lesson_1/lesson_1.html
+++ b/lesson_1/lesson_1.html
@@ -24,6 +24,8 @@
         recognized as a pioneer of the personal computer revolution of the 1970s and 1980s, along with his early
         business partner and fellow Apple co-founder Steve Wozniak.
     </p>
+</div>
+<div>
     <p>
         Jobs was born in San Francisco, California, and put up for adoption. He was raised in the San Francisco Bay
         Area. He attended Reed College in 1972 before dropping out that same year, and traveled through India in 1974
