--- a/lesson_1/lesson_1.html
+++ b/lesson_1/lesson_1.html
@@ -35,6 +35,8 @@
 
 <div>
     <h3>Honors and awards</h3>
+</div>
+<div>
     <ul>
         <li>2013: Posthumously inducted as a Disney Legend.</li>
         <li>2012: Grammy Trustees Award, an award for those who have influenced the music industry in areas unrelated to
