--- a/lesson_2/lesson_2.html
+++ b/lesson_2/lesson_2.html
@@ -5,9 +5,39 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,800;1,200;1,300;1,400;1,500;1,600&display=swap"
+          rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-
+<div class="container">
+    <div>
+        <h1>Steve Jobs</h1>
+        <h2>Co-founder, Chairman, and CEO of Apple Inc.</h2>
+    </div>
+    <div><img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Steve_Jobs_Headshot_2010-CROP.jpg/1024px-Steve_Jobs_Headshot_2010-CROP.jpg"
+            alt="Steve"></div>
+    <div>
+        <h3>Honors and awards</h3>
+    </div>
+    <div>
+        <ul>
+            <li>2013: Posthumously inducted as a Disney Legend.</li>
+            <li>2012: Grammy Trustees Award, an award for those who have influenced the music industry in areas
+                unrelated to performance
+            </li>
+            <li>2007: Jobs was inducted into the California Hall of Fame, located at The California Museum for History,
+                Women and the Arts.
+            </li>
+            <li>2007: Jobs was named the most powerful person in business by Fortune magazine.</li>
+            <li>1991: Howard Vollum Award by Reed College</li>
+            <li>1989: '’Entrepreneur of the Decade'’ by Inc. magazine</li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
