--- a/lesson_2/lesson_2.html
+++ b/lesson_2/lesson_2.html
@@ -20,7 +20,18 @@
     </div>
     <div><img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Steve_Jobs_Headshot_2010-CROP.jpg/1024px-Steve_Jobs_Headshot_2010-CROP.jpg"
-            alt="Steve"></div>
+            alt="Steve">
+    </div>
+    <div>
+        <p>
+            Steven Paul Jobs was an American business magnate, industrial
+            designer, investor, and media proprietor. He was the chairman, chief executive officer (CEO), and co-founder of
+            Apple Inc.; the chairman and majority shareholder of Pixar; a member of The Walt Disney Company's board of
+            directors following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
+            recognized as a pioneer of the personal computer revolution of the 1970s and 1980s, along with his early
+            business partner and fellow Apple co-founder Steve Wozniak.
+        </p>
+    </div>
     <div>
         <h3>Honors and awards</h3>
     </div>
