--- a/lesson_4_Flex/Additional_1/index.html
+++ b/lesson_4_Flex/Additional_1/index.html
@@ -11,32 +11,25 @@
 <body>
 <div class="wrapper">
     <div class="container">
-        <div class="header">header</div>
-
+        <div class="header"></div>
         <div class="content">
-
             <div class="a">
-                <div class="hero">hero</div>
-                <div class="main-content">main-content</div>
+                <div class="hero"></div>
+                <div class="main-content"></div>
             </div>
-
-
             <div class="b">
-                <div class="sidebar">side</div>
-                <div class="extra-content">extra-content</div>
+                <div class="sidebar"></div>
+                <div class="extra-content"></div>
             </div>
-
-
         </div>
-
-        <div class="related-images">related-images</div>
-        <div class="posts">posts</div>
-
-        <div class="footer">footer</div>
+        <div class="images">
+            <div class="related-images"></div>
+            <div class="posts"></div>
+        </div>
+        <div class="foo">
+            <div class="footer"></div>
+        </div>
     </div>
-
 </div>
-
-
 </body>
 </html>
