--- a/lesson_5_BEM/additional/index.html
+++ b/lesson_5_BEM/additional/index.html
@@ -42,25 +42,101 @@
             </div>
         </div>
         <div class="goods wr">
-
             <div class="border_blue wr">
-                <div class="goods__header">Lorem</div>
+                <div class="goods__header">
+                    <p>Lorem</p>
+                </div>
                 <div class="cards">
                     <div class="card">
-                        <div class="card__img">Card img</div>
-                        <div class="card__text">Card text</div>
+                        <div class="card__img"></div>
+                        <div class="card__text card__text_color"></div>
                     </div>
                     <div class="card">
-                        <div class="card__img">Card img</div>
-                        <div class="card__text">Card text</div>
+                        <div class="card__img"></div>
+                        <div class="card__text card__text_color"></div>
                     </div>
                     <div class="card">
-                        <div class="card__img">Card img</div>
-                        <div class="card__text">Card text</div>
+                        <div class="card__img"></div>
+                        <div class="card__text card__text_color"></div>
                     </div>
                 </div>
             </div>
-
+        </div>
+        <div class="team wr">
+            <div class="team__member">
+                <div class="member__image radius"></div>
+                <div class="member__text"></div>
+                <div class="member__text"></div>
+            </div>
+            <div class="team__member border_light_blue ">
+                <div class="member__image radius"></div>
+                <div class="member__text"></div>
+                <div class="member__text"></div>
+            </div>
+            <div class="team__member">
+                <div class="member__image radius"></div>
+                <div class="member__text"></div>
+                <div class="member__text"></div>
+            </div>
+        </div>
+        <div class="products wr">
+            <div class="products__header radius"></div>
+            <div class="products__cards">
+                <div class="product__card border_light_blue">
+                    <div class="top__card">
+                        <div class="product__image"></div>
+                        <div class="product__text"></div>
+                    </div>
+                    <div class="bottom__card">
+                        <div class="bottom_icon radius"></div>
+                    </div>
+                </div>
+                <div class="product__card border_light_blue">
+                    <div class="top__card">
+                        <div class="product__image"></div>
+                        <div class="product__text"></div>
+                    </div>
+                    <div class="bottom__card">
+                        <div class="bottom_icon radius"></div>
+                    </div>
+                </div>
+                <div class="product__card border_light_blue">
+                    <div class="top__card">
+                        <div class="product__image"></div>
+                        <div class="product__text"></div>
+                    </div>
+                    <div class="bottom__card">
+                        <div class="bottom_icon radius"></div>
+                    </div>
+                </div>
+                <div class="product__card border_light_blue">
+                    <div class="top__card">
+                        <div class="product__image"></div>
+                        <div class="product__text"></div>
+                    </div>
+                    <div class="bottom__card">
+                        <div class="bottom_icon radius"></div>
+                    </div>
+                </div>
+                <div class="product__card border_light_blue">
+                    <div class="top__card">
+                        <div class="product__image"></div>
+                        <div class="product__text"></div>
+                    </div>
+                    <div class="bottom__card">
+                        <div class="bottom_icon radius"></div>
+                    </div>
+                </div>
+                <div class="product__card border_light_blue">
+                    <div class="top__card">
+                        <div class="product__image"></div>
+                        <div class="product__text"></div>
+                    </div>
+                    <div class="bottom__card">
+                        <div class="bottom_icon radius"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
