--- a/lesson_5_BEM/classwork/index.html
+++ b/lesson_5_BEM/classwork/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="a">
+        <div class="b">1</div>
+        <div class="b">1</div>
+        <div class="b">1</div>
+        <div class="b">1</div>
+    </div>
 </body>
 </html>
