--- a/lesson_5_BEM/additional/index.html
+++ b/lesson_5_BEM/additional/index.html
@@ -138,6 +138,8 @@
                 </div>
             </div>
         </div>
+        <div class="directions"></div>
+        <footer class="footer"></footer>
 
     </div>
 
