Add lesson_5 BEM - Additional task

--- a/lesson_5_BEM/additional/index.html
+++ b/lesson_5_BEM/additional/index.html
@@ -138,8 +138,17 @@
                 </div>
             </div>
         </div>
-        <div class="directions"></div>
-        <footer class="footer"></footer>
+        <div class="directions wr">
+            <div class="dir__one dir__one_color"></div>
+            <div class="dir__two dir__two_color"></div>
+        </div>
+        <footer class="footer">
+            <div class="border__bottom">
+                <div class="footer__icon"></div>
+                <div class="footer__icon"></div>
+                <div class="footer__icon"></div>
+            </div>
+        </footer>
 
     </div>
 
