--- a/lesson_Media_queries/homework/index.html
+++ b/lesson_Media_queries/homework/index.html
@@ -10,11 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
 <div class="wrapper">
     <div class="container">
-        <div class="nav">
+        <div class="nav wr">
             <div class="nav__item radius_50"></div>
             <div class="nav__item radius_50"></div>
             <div class="nav__item radius_50"></div>
@@ -80,7 +81,9 @@
             </div>
         </div>
         <div class="products wr">
-            <div class="products__header radius"></div>
+            <div class="products__header radius">
+
+            </div>
             <div class="products__cards">
                 <div class="product__card border_light_blue">
                     <div class="top__card">
