--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -20,7 +20,6 @@
 <body>
 <div class="container">
     <div class="home">
-
         <div class="header">
             <div class="logo"><img src="./images/LOGO.svg" alt="Logo"></div>
             <div class="nav">
@@ -34,48 +33,54 @@
                     </div>
                 </div>
                 <div class="phone">
-
                     <div class="wrap">
                         <div class="phone__img"><img src="./images/phone.png" alt=""></div>
                         <div class="phone__number">+999-888-76-54</div>
                     </div>
-
-
                     <div class="phone__text">Свяжитесь с нами для бронирования</div>
                 </div>
                 <div class="button">Заказ столика</div>
-
-
             </div>
-
         </div>
         <div class="header__text">
-            <div class="header__text_h2">Добро пожаловать в</div>
+            <div class="header__text_h2">Добро пожаловать</div>
             <div class="header__text_h1">Наш ресторан</div>
             <div class="header__text_p"> Дом лучшей еды</div>
-            <div class="button">Показать меню</div>
+            <div class="button__header">Показать меню</div>
         </div>
-
-
     </div>
     <div class="benefits wrapper">
-
         <div class="wr">
             <div class="benefits__item">
                 <img src="./images/Mask%20Group.png" alt="ben">
+                <div class="item__text">
+                    <div class="item__text_header">Магическая <span>Атмосфера</span></div>
+                    <div class="item__text_p">В нашем заведении царит магическая атмосфера
+                        наполненная вкусными ароматами
+                    </div>
+                </div>
             </div>
-
             <div class="benefits__item">
                 <img src="./images/Mask%20Group.png" alt="ben">
+                <div class="item__text">
+                    <div class="item__text_header">Лучшее качество <span>Еды</span></div>
+                    <div class="item__text_p">Качество нашей <br>Еды - отменное!
+                    </div>
+                </div>
             </div>
-
             <div class="benefits__item">
                 <img src="./images/Mask%20Group.png" alt="ben">
+                <div class="item__text">
+                    <div class="item__text_header">Недорогая <span>Еда</span></div>
+                    <div class="item__text_p">Стоимость нашей Еды
+                        зависит только от ее
+                        количества. Качество
+                        всегда на высоте!
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
-
 </div>
 
 
