--- a/Restaurant_bootstrap/index.html
+++ b/Restaurant_bootstrap/index.html
@@ -12,7 +12,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="container-fluid bg__image h-100">
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <div class="container">
+            <a href="#" class="navbar-brand"><img src="./images/LOGO.svg" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2">
+                    <li class="nav-item" >
+                        <a href="#" class="nav-link text-center text-white">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-center text-white">Меню</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-center text-white">О нас</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-center text-white">Бронь</a>
+                    </li>
+                </ul>
+            </div>
+
+
+        </div>
+
+    </nav>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
