--- a/Restaurant_bootstrap/index.html
+++ b/Restaurant_bootstrap/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="container-fluid bg__image h-100">
-    <nav class="navbar navbar-expand-sm navbar-light">
+<div class="container-fluid bg__image">
+    <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container">
             <a href="#" class="navbar-brand"><img src="./images/LOGO.svg" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -21,10 +21,9 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2">
-                    <li class="nav-item" >
+            <div class="collapse navbar-collapse pe-2" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
                         <a href="#" class="nav-link text-center text-white">Главная</a>
                     </li>
                     <li class="nav-item">
@@ -36,14 +35,84 @@
                     <li class="nav-item">
                         <a href="#" class="nav-link text-center text-white">Бронь</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-center text-white">
+                            <img src="./images/cart.png" alt="cart">
+                        </a>
+                    </li>
                 </ul>
+                <div class="text-white ms-2 ps-4 d-flex flex-column border-start align-items-center d-none d-sm-block ">
+                    <div>+999-888-76-54</div>
+                    <div>
+                        Свяжитесь с нами для <br>бронирования
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-warning text-nowrap ms-xl-3 h1">Заказ столика</button>
+                </div>
             </div>
-
-
         </div>
-
     </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-12 d-flex align-items-center flex-column">
+                <p class="fs-2 header-color">Добро пожаловать в</p>
+                <p class="fs-2 header-color">Наш ресторан</p>
+                <p class="fs-2 header-color">Дом лучшей еды</p>
+            </div>
+        </div>
+    </div>
+
+
 </div>
+
+<div class="container card__group pos-rel">
+    <div class="row me-0 row-cols-1 row-cols-md-3 g-lg-4 gy-4 pos-abs">
+        <div class="col">
+            <div class="card h-100 text-center p-3 bg-light border-light shadow bg-body rounded">
+                <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
+                                                                     class="card-img-top"
+                                                                     alt="..."></div>
+                <div class="card-body ">
+                    <h5 class="card-title fs-3">Магическая Атмосфера</h5>
+                    <p class="card-text fs-4 fw-light mt-4">В нашем заведении царит магическая атмосфера наполненная
+                        вкусными ароматами</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 text-center p-3 bg-light border-light shadow bg-body rounded">
+                <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
+                                                                     class="card-img-top"
+                                                                     alt="..."></div>
+                <div class="card-body ">
+                    <h5 class="card-title fs-3">Лучшее качество Еды</h5>
+                    <p class="card-text fs-4 fw-light mt-4">Качество нашей
+                        Еды - отменное!
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 text-center p-3 bg-light border-light shadow bg-body rounded">
+                <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
+                                                                     class="card-img-top"
+                                                                     alt="..."></div>
+                <div class="card-body ">
+                    <h5 class="card-title fs-3">Недорогая Еда</h5>
+                    <p class="card-text fs-4 fw-light mt-4">Стоимость нашей Еды
+                        зависит только от ее
+                        количества. Качество
+                        всегда на высоте!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -53,3 +122,4 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
