--- a/Restaurant_bootstrap/index.html
+++ b/Restaurant_bootstrap/index.html
@@ -10,6 +10,9 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalized.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid bg__image">
@@ -22,9 +25,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse pe-2" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link text-center text-white">Главная</a>
+                <ul class="navbar-nav ms-auto text-uppercase">
+                    <li class="nav-item ">
+                        <a href="#" class="nav-link text-center text-white ">Главная</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link text-center text-white">Меню</a>
@@ -54,12 +57,13 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container h-50 d-flex align-items-center justify-content-center justify-content-md-start" >
         <div class="row">
-            <div class="col-lg-6 col-12 d-flex align-items-center flex-column">
-                <p class="fs-2 header-color">Добро пожаловать в</p>
-                <p class="fs-2 header-color">Наш ресторан</p>
-                <p class="fs-2 header-color">Дом лучшей еды</p>
+            <div class="col-12 d-flex align-items-center flex-column">
+                <p class="fs-3 header-color">Добро пожаловать в</p>
+                <p class="fs-1 header-color ">Наш ресторан</p>
+                <p class="fs-3 header-color">Дом лучшей еды</p>
+                <button class="btn btn-warning text-nowrap h1">Показать меню</button>
             </div>
         </div>
     </div>
@@ -75,7 +79,7 @@
                                                                      class="card-img-top"
                                                                      alt="..."></div>
                 <div class="card-body ">
-                    <h5 class="card-title fs-3">Магическая Атмосфера</h5>
+                    <h5 class="card-title fs-3">Магическая <span>Атмосфера</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">В нашем заведении царит магическая атмосфера наполненная
                         вкусными ароматами</p>
                 </div>
@@ -87,7 +91,7 @@
                                                                      class="card-img-top"
                                                                      alt="..."></div>
                 <div class="card-body ">
-                    <h5 class="card-title fs-3">Лучшее качество Еды</h5>
+                    <h5 class="card-title fs-3">Лучшее качество <span>Еды</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">Качество нашей
                         Еды - отменное!
                     </p>
@@ -100,7 +104,7 @@
                                                                      class="card-img-top"
                                                                      alt="..."></div>
                 <div class="card-body ">
-                    <h5 class="card-title fs-3">Недорогая Еда</h5>
+                    <h5 class="card-title fs-3">Недорогая <span>Еда</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">Стоимость нашей Еды
                         зависит только от ее
                         количества. Качество
