Add Restaurant_bootstrap homework

--- a/Restaurant_bootstrap/index.html
+++ b/Restaurant_bootstrap/index.html
@@ -56,19 +56,20 @@
             </div>
         </div>
     </nav>
+    <div class="container h-50  d-flex justify-content-center justify-content-lg-start">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-12 text-center text-lg-start justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <p class="header-color display-6">Добро пожаловать в</p>
+                    <p class="header-color display-1 font-family">Наш ресторан</p>
+                    <p class="header-color color-white font-family display-6">Дом лучшей еды</p>
+                    <button class="btn btn-warning mt-4">Показать меню</button>
+                </div>
 
-    <div class="container h-50 d-flex align-items-center justify-content-center justify-content-md-start" >
-        <div class="row">
-            <div class="col-12 d-flex align-items-center flex-column">
-                <p class="fs-3 header-color">Добро пожаловать в</p>
-                <p class="fs-1 header-color ">Наш ресторан</p>
-                <p class="fs-3 header-color">Дом лучшей еды</p>
-                <button class="btn btn-warning text-nowrap h1">Показать меню</button>
             </div>
+
         </div>
     </div>
-
-
 </div>
 
 <div class="container card__group pos-rel">
@@ -90,7 +91,7 @@
                 <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
                                                                      class="card-img-top"
                                                                      alt="..."></div>
-                <div class="card-body ">
+                <div class="card-body">
                     <h5 class="card-title fs-3">Лучшее качество <span>Еды</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">Качество нашей
                         Еды - отменное!
@@ -101,9 +102,8 @@
         <div class="col">
             <div class="card h-100 text-center p-3 bg-light border-light shadow bg-body rounded">
                 <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
-                                                                     class="card-img-top"
-                                                                     alt="..."></div>
-                <div class="card-body ">
+                                                                     class="card-img-top" alt="..."></div>
+                <div class="card-body">
                     <h5 class="card-title fs-3">Недорогая <span>Еда</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">Стоимость нашей Еды
                         зависит только от ее
@@ -114,8 +114,6 @@
         </div>
     </div>
 </div>
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
