Add Restaurant_bootstrap homework

--- a/Restaurant_bootstrap/index.html
+++ b/Restaurant_bootstrap/index.html
@@ -18,7 +18,7 @@
 <div class="container-fluid bg__image">
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container">
-            <a href="#" class="navbar-brand"><img src="./images/LOGO.svg" alt=""></a>
+            <a href="#" class="navbar-brand"><img src="./images/LOGO.svg" alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
             <div class="card h-100 text-center p-3 bg-light border-light shadow bg-body rounded">
                 <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
                                                                      class="card-img-top"
-                                                                     alt="..."></div>
+                                                                     alt="Card"></div>
                 <div class="card-body ">
                     <h5 class="card-title fs-3">Магическая <span>Атмосфера</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">В нашем заведении царит магическая атмосфера наполненная
@@ -90,7 +90,7 @@
             <div class="card h-100 text-center p-3 bg-light border-light shadow bg-body rounded">
                 <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
                                                                      class="card-img-top"
-                                                                     alt="..."></div>
+                                                                     alt="Card"></div>
                 <div class="card-body ">
                     <h5 class="card-title fs-3">Лучшее качество <span>Еды</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">Качество нашей
@@ -102,7 +102,7 @@
         <div class="col">
             <div class="card h-100 text-center p-3 bg-light border-light shadow bg-body rounded">
                 <div class="d-flex justify-content-center mt-4"><img src="./images/Mask%20Group.png"
-                                                                     class="card-img-top" alt="..."></div>
+                                                                     class="card-img-top" alt="Card"></div>
                 <div class="card-body">
                     <h5 class="card-title fs-3">Недорогая <span>Еда</span></h5>
                     <p class="card-text fs-4 fw-light mt-4">Стоимость нашей Еды
