--- a/Final_project/index.html
+++ b/Final_project/index.html
@@ -68,26 +68,182 @@
 
 
     </div>
-
 </div>
-
 <div class="header">
-    <div class="container">
+    <div class="container header__info">
         <div class="logo">
             <div class="logo__img"><img src="./images/logo.png" alt="logo"></div>
             <div>
                 <div class="logo__h1">AVT-ZAP</div>
-                <div class="logo__text">Интернет-магазин запчастей для АКПП</div>
+                <div class="logo__text">Интернет-магазин запчастей <br>для АКПП</div>
+            </div>
+        </div>
+        <div class="time">
+            <div class="time__logo">
+                <img src="./images/time_1.png" alt="time">
+            </div>
+            <div class="time__text">
+                Мы работаем: будни - 9:00-21:00 <span>сб. - 10:00-15:00</span>
+            </div>
+        </div>
+        <div class="street">
+            <div class="street__img"><img src="./images/placeholder%201.png" alt="place_loc"></div>
+            <div class="street__text">Невский пр-т, д. 45</div>
+        </div>
+        <div class="call">
+            <div class="whatsapp">
+                <div class="whatsapp__img"><img src="./images/whatsapp%20(2)%201.png" alt="whatsapp"></div>
+                <div class="whatsapp__text">Напишите нам в WhatsApp</div>
+            </div>
+            <div class="phone">
+                <div class="phone__number">+7 383 291 92 86</div>
+                <div class="phone__form">форма обратной связи</div>
+            </div>
+        </div>
+    </div>
+    <div class="container container__search">
+
+        <div class="left__nav">
+            <button type="button" class="btn btn-primary me-3"><i class="bi bi-list"></i><span>Каталог</span></button>
+            <form class="d-flex">
+                <input class="form-control me-1 search" type="search" placeholder="Поиск по наименованию или артикулу"
+                       aria-label="Search">
+                <button class="btn btn-primary m" type="submit"><i class="bi bi-search d-xl-none"></i><span>Найти</span>
+                </button>
+            </form>
+
+
+        </div>
+
+        <div class="right__nav">
+            <div class="login">
+                <div class="login__icon"><img src="./images/user%20(1)%201.png" alt="user"></div>
+                <div class="login__text">Войти</div>
+            </div>
+
+            <div class="favorite">
+                <div class="favorite__icon"><img src="./images/heart%201.png" alt="heart"></div>
+                <div class="favorite__text">Войти</div>
+            </div>
+
+            <div class="cart">
+                <div class="cart__icon"><img src="./images/cart%201.png" alt="cart"></div>
+                <div class="cart__text">В корзине <br>нет товаров</div>
             </div>
 
 
         </div>
-        <div class="time">Time</div>
-        <div class="whatsapp">whatsapp</div>
-        <div class="whatsapp">phone</div>
+
+
+    </div>
+</div>
+<div class="container slider">
+    <div class="row gx-2">
+        <div class="col-xl-9">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/background_slider.png" class="d-block w-100 " alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/background_slider.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/background_slider.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="col-xl-3">
+            <div class="actions">
+                <div class="action">
+                    <div class="action__sale">Акция</div>
+                    <div class="action__info">
+                        <div><img src="./images/detail.png" class="action__info-img" alt="detail"></div>
+                        <div>
+                            <div class="action__info-h1">Обгонная муфта гидротрансформатор</div>
+                            <div class="action__info-h2">BW-SP-2 SONNAX</div>
+                            <div class="action__info-price">4 430₽ <span>5 430₽</span></div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="action">
+                    <div class="action__sale">Акция</div>
+                    <div class="action__info">
+                        <div><img src="./images/detail.png" class="action__info-img" alt="detail"></div>
+                        <div>
+                            <div class="action__info-h1">Обгонная муфта гидротрансформатор</div>
+                            <div class="action__info-h2">BW-SP-2 SONNAX</div>
+                            <div class="action__info-price">4 430₽ <span>5 430₽</span></div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+
+            <div class="row categories__row">
+                <div class="col-md-4">
+                    <div class="categories">
+                        <div class="categories__text">
+                            <div class="categories_h1">Масла</div>
+                            <div class="categories_h2">Трансмиссионное масло; <span>присалка в масло акпп</span></div>
+                            <div class="btn btn-primary btn-sm">Перейти</div>
+                        </div>
+                        <div class="categories__img"><img src="./images/oil.png" alt="oil"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="categories">
+                        <div class="categories__text">
+                            <div class="categories_h1">Масла</div>
+                            <div class="categories_h2">Трансмиссионное масло; <span>присалка в масло акпп</span></div>
+                            <div class="btn btn-primary btn-sm">Перейти</div>
+                        </div>
+                        <div class="categories__img"><img src="./images/oil.png" alt="oil"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="categories">
+                        <div class="categories__text">
+                            <div class="categories_h1">Масла</div>
+                            <div class="categories_h2">Трансмиссионное масло; <span>присалка в масло акпп</span></div>
+                            <div class="btn btn-primary btn-sm">Перейти</div>
+                        </div>
+                        <div class="categories__img"><img src="./images/oil.png" alt="oil"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
