Add final project folder

--- a/Final_project/index.html
+++ b/Final_project/index.html
@@ -202,7 +202,6 @@
         </div>
     </div>
 </div>
-
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -240,10 +239,33 @@
                 </div>
             </div>
         </div>
-        
+    </div>
+</div>
+<div class="container">
+    <div class="row row-cols-auto gx-2 flex-nowrap button__row">
+        <div class="col"><button type="button" class="btn btn-primary">Подборки товаров</button></div>
+        <div class="col"><button type="button" class="btn btn-outline-primary">Акции</button></div>
+        <div class="col"><button type="button" class="btn btn-outline-primary">Сейчас покупают</button></div>
 
     </div>
 </div>
+<div class="selections">
+    <div class="container">
+        <div class="row row-cols-4">
+            <div class="col-md-3">
+                <div class="selections__img"><img src="./images/piston.png" alt="piston"></div>
+                <div class="selections__reviews">4.5 10 отзывов</div>
+                <div class="selections__h1">Intermediate accumelator sleeve</div>
+                <div class="action__info-price">4 430₽ <span>5 430₽</span></div>
+
+            </div>
+            <div class="col-md-3">Column</div>
+            <div class="col-md-3">Column</div>
+            <div class="col-md-3">Column</div>
+        </div>
+    </div>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
