Add final project

--- a/Classwork_bootstrap/index.html
+++ b/Classwork_bootstrap/index.html
@@ -119,26 +119,28 @@
                 </div>
 
             </div>
-            <div class="col-xxl-7 col-xl-7 col-lg-7 right__img">
+            <div class="col-xxl-7 col-xl-7 col-lg-7 right__img h-100">
                 <img src="./images/Multistage.png" alt="aircond" class="img-fluid">
             </div>
         </div>
         <div class="row">
-            <div class="col-xl-5">
+            <div class="col-md-5 g-0">
                 <img src="./images/Plant.png" alt="plant" class="img-fluid">
             </div>
-            <div class="col-xl-7 plant-color text-white">
-                <div class="">
-                    <div class="text-uppercase fs-4 fw-bold">MODERNSTE STANDARDS</div>
-                    <p class="fs-5">Aktuelle Richtlinien und Verordnungen bezüglich des Kältemittel Phase-Downs müssen berücksichtigt
+            <div class="col-md-7 plant-color text-white p-2 p-md-5">
+                <div class="text-wrap">
+                    <div class="text-uppercase fs-4 fw-bold text__header">MODERNSTE STANDARDS</div>
+                    <p class="fs-5">Aktuelle Richtlinien und Verordnungen bezüglich des Kältemittel Phase-Downs müssen
+                        berücksichtigt
                         werden. Der langfristige Einsatz des Kältemittels muss sowohl nach ökonomischen als auch
-                        strategischen Gesichtspunkten entschieden werden.
-                    </p>
-                    <p>Alle unsere Kältemaschinen entsprechen dem modernsten Stand der Technik und werden in den
+                        strategischen Gesichtspunkten entschieden werden.<br>
+                        <br>
+                        Alle unsere Kältemaschinen entsprechen dem modernsten Stand der Technik und werden in den
                         unterschiedlichsten Branchen eingesetzt. Unser Angebot umfasst ein breites Sortiment an
                         natürlichen
                         und frigenen Kältemitteln,
-                        die den aktuellsten Normen und Verordnungen entsprechen.</p></div>
+                        die den aktuellsten Normen und Verordnungen entsprechen.</p>
+                </div>
             </div>
         </div>
     </div>
